Implemented some services
